<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/green">
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="23dp"
            android:text="@string/Edit"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button1"
            android:src="@drawable/arrow"
            android:layout_marginLeft="-86dp"
            android:layout_marginTop="15dp"/>
    </TableRow>

    <TableRow>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:textColor="@color/grey"
                android:hint="@string/time"
                android:paddingLeft="10dp"
                android:paddingTop="6dp"
                android:paddingBottom="5dp"
                android:textSize="18dp"
                android:width="148dp"
                android:gravity="center"
                android:drawableLeft="@drawable/clock"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="75dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:textColor="@color/grey"
                android:hint="@string/data"
                android:paddingLeft="10dp"
                android:paddingTop="6dp"
                android:paddingBottom="5dp"
                android:textSize="18dp"
                android:width="148dp"
                android:gravity="center"
                android:drawableLeft="@drawable/date"
                />
        </LinearLayout>

</TableRow>

    <TableRow>
        <TextView
            android:text="@string/rep"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="19dp">
        </TextView>
    </TableRow>
    <TableRow>
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/check"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="363dp"
            android:layout_marginTop="15dp">
        </CheckBox>

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="-356dp">
        </TextView>
    </TableRow>
    <TableRow>
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/check"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="363dp"
            android:layout_marginTop="15dp">
        </CheckBox>

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="-356dp">
        </TextView>
    </TableRow>
    <TableRow>
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/check"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="363dp"
            android:layout_marginTop="15dp">
        </CheckBox>

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/wen"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="-356dp">
        </TextView>
    </TableRow>
    <TableRow>
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/check"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="363dp"
            android:layout_marginTop="15dp">
        </CheckBox>

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/th"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="-356dp">
        </TextView>
    </TableRow>
    <TableRow>
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/check"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="363dp"
            android:layout_marginTop="15dp">
        </CheckBox>

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="-356dp">
        </TextView>
    </TableRow>
    <TableRow>
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/check"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="363dp"
            android:layout_marginTop="15dp">
        </CheckBox>

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/sut"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="-356dp">
        </TextView>
    </TableRow>
    <TableRow>
        <CheckBox
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:buttonTint="@color/white"
            android:background="@drawable/check"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="363dp"
            android:layout_marginTop="15dp">
        </CheckBox>

        <TextView
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="-356dp">
        </TextView>
    </TableRow>
<TableRow>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:text="@string/ud"
        android:layout_marginTop="156dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="49dp"
        android:textColor="@color/white"
       />
</TableRow>
    <TableRow>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button3"
            android:text="@string/save"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="49dp"
            android:textColor="@color/white"
            />
    </TableRow>

</TableLayout>